dim/spec/test_input/invalid_attributes/invalid_default.dim
cluster:
  type: text
  default: ''
necessary:
  type: single
  default: red
  allowed:
    - green
    - blue
